--- a/lab1/P2P/CMakeLists.txt
+++ b/lab1/P2P/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
-project(lab1 C)
+project(lab1)
 
 set(CMAKE_C_STANDARD 11)
 
 link_libraries(ws2_32 wsock32)
 
-add_executable(lab1 main.c)
+add_executable(P2P main.c)
