--- a/lab1/CS/CMakeLists.txt
+++ b/lab1/CS/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.21)
 project(CS)
 
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_EXE_LINKER_FLAGS -static)
 
 link_libraries(ws2_32 wsock32)
 
